syntax="proto3";
package internl;

option go_package = "github.com/benka-me/internationalisation/go-pkg/internl";

enum Languages {
    EN = 0;
    FR = 1;
}
message MessageRequest {
    string ServiceRequester = 1;
    Languages Lang = 2;
    uint32 Code = 3;
}

message MessageResponse {
    string Value = 1;
}

message PushMessage {
    string Value = 1;
    Languages Lang = 2;
    uint32 Code = 3;
}
message PushMessageRes {
}

message NewCode {
    string Title = 1;
    uint32 Code = 2;
}

message NewCodeRes {

}

message SetTitleCode {
    string Title = 1;
    uint32 Code = 2;
}

message SetTitleCodeRes {

}

message CodeReq {
    uint32 Code = 1;
}

message Code{
    uint32 Code = 1;
    string Title = 2;
    map<uint32, string> Values = 3;
}

message AllReq {}

message All {
    map<uint32, Code> Codes= 3;
}
