syntax="proto3";
package RpcInternl;

option go_package = "github.com/benka-me/internationalisation/go-pkg/rpc-internl";

import "github.com/benka-me/internationalisation/protobuf/internl.proto";

service Internl {
    rpc GetMessage(internl.MessageRequest) returns (internl.MessageResponse);
    rpc UpdateMessage(internl.PushMessage) returns (internl.PushMessageRes);
    rpc InsertCode(internl.NewCode) returns (internl.NewCodeRes);
    rpc UpdateTitle(internl.SetTitleCode) returns (internl.SetTitleCodeRes);
    rpc GetCode(internl.CodeReq) returns (internl.Code);
    rpc GetAll(internl.AllReq) returns (internl.All);
}
